--- a/css/user-pref.css
+++ b/css/user-pref.css
@@ -3,3 +3,59 @@
 *::after {
     box-sizing: border-box;
 }
+
+:root {
+    --bg-color:  rgb(121, 119, 119);
+    --main-color: gray; 
+    --main-border-color: rgb(58, 58, 58); 
+    --font-size-small:
+}
+
+body {
+    position: relative;
+    margin: 3em;
+
+    text-align: left;
+    font-family: 'Courier New', Courier, monospace;
+
+    background-color: var(--bg-color);
+}
+
+main {
+    padding: 1em;
+
+    
+    border-radius: 1em;
+    border: 2px dotted var(--main-border-color);
+    background-color: var(--main-color);
+}
+
+
+form{
+
+    width: 100%;
+    height: 100%;
+    background-color: yellow;
+}
+
+nav {
+
+    display: flex;
+
+    justify-self: center;
+
+    gap: 1em;
+
+    width: fit-content;
+
+    border-radius: 1em;
+
+    background-color: var(--main-color);
+}
+
+nav button {
+    cursor: pointer;
+
+    border-radius: 1em;
+    background-color: dimgrey;
+}
