--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,13 @@
     
     --main-border: 2px dotted rgb(58, 58, 58);
     --main-border-radios: 1em;
-    /* --main-border-color: rgb(58, 58, 58); */
+    --main-border-color: rgb(58, 58, 58);
     --gallery-color: #919191c4;
     --margin-between: 2em;
     --font-size-small: .5em;
     --font-size-medium: 1em;
     --font-size-large: 1.5em;
+    --max-width-vw : 60vw;
 
 }
 
@@ -37,10 +38,14 @@ body {
     background-color: var(--bg-color);
 }
 
+main{
+    max-width: var(--max-width-vw);
+margin-block-start: var(--margin-between);
+}
+
 header {
     padding: 1em;
 
-    max-width: 60vw;
 
     border-radius: var(--main-border-radios);
     border: var(--main-border);
@@ -64,7 +69,6 @@ img {
     justify-content: center;
 
     padding: .1em;
-    max-width: 60vw;
 
     margin-block-end: var(--margin-between);
 
@@ -76,7 +80,6 @@ img {
 
 
 .pics-gallery h2 {
-    max-width: 60vw;
 
     font-size: 1em;
 
@@ -92,6 +95,8 @@ img {
 nav {
     display: flex;
 
+    justify-self: center;
+
     gap: 1em;
 
     width: fit-content;
@@ -106,17 +111,12 @@ nav a {
     cursor: pointer;
 
     border-radius: var(--main-border-radios);
+    color: inherit;
     background-color: var(--main-color);
 }
 
 
 footer {
-
-    /* position: fixed;
-    bottom:-1em;
-    left: 50%;
-    translate: -50% -50%;
- */
     display: flex;
 
     justify-content: space-around;
@@ -176,16 +176,51 @@ form button {
 }
 
 .birth-date{
-    
+    position: relative;
+    display: grid;
+
+    place-items: center;
+
     padding: .5em;
     
     margin-block-end: .5em;
     
+    text-align: center;
     font-family: sans-serif;
     
     border-radius: var(--main-border-radios);
     background-color:var(--second-bg-color);
 }
+
+ .birth-date p:nth-child(1){
+    grid-column: 1 / 3;
+    grid-row: 1;
+} 
+ .birth-date p:nth-child(2){
+    grid-column: 2;
+    grid-row: 2;
+}
+.birth-date p:nth-child(3){
+    grid-column: 1;
+    grid-row: 2; 
+ } 
+
 time.birth-date{
+
     margin-block-end: var(--margin-between);
+}
+
+.map-container{
+    width: 100%;
+    height: 400px;
+    
+margin-block-end: var(--margin-between);
+}
+
+.places{
+    height: 100px;
+
+    margin-block-end: var(--margin-between);
+
+    background-color: rgb(151, 101, 36);
 }
