--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,11 @@
 }
 
 :root {
-    --bg-color: aquamarine;
+    --bg-color: rgb(52, 53, 52);
     --second-bg-color: #f0f0f0;
     --text-color: black;
     --main-color: gray;
-    
+
     --main-border: 2px dotted rgb(58, 58, 58);
     --main-border-radios: 1em;
     --main-border-color: rgb(58, 58, 58);
@@ -18,7 +18,7 @@
     --font-size-small: .5em;
     --font-size-medium: 1em;
     --font-size-large: 1.5em;
-    --max-width-vw : 60vw;
+    --max-width-vw: 60vw;
 
 }
 
@@ -29,7 +29,7 @@ body {
 
     align-items: center;
 
-    text-align: left;
+    text-align: center;
 
     margin-block: 1em;
     font-family: 'Courier New', Courier, monospace;
@@ -38,9 +38,9 @@ body {
     background-color: var(--bg-color);
 }
 
-main{
+main {
     max-width: var(--max-width-vw);
-margin-block-start: var(--margin-between);
+    margin-block-start: var(--margin-between);
 }
 
 header {
@@ -103,11 +103,15 @@ nav {
 
     margin-block-end: var(--margin-between);
 
+    font-weight: bold;
+    font-size: 1.2em;
     border-radius: 1em;
 
 }
 
 nav a {
+
+    padding: .5em;
     cursor: pointer;
 
     border-radius: var(--main-border-radios);
@@ -175,52 +179,84 @@ form button {
     background-color: whitesmoke;
 }
 
-.birth-date{
+.birth-date {
     position: relative;
     display: grid;
 
     place-items: center;
 
     padding: .5em;
-    
+
     margin-block-end: .5em;
-    
+
     text-align: center;
     font-family: sans-serif;
-    
+
     border-radius: var(--main-border-radios);
-    background-color:var(--second-bg-color);
+    background-color: var(--second-bg-color);
 }
 
- .birth-date p:nth-child(1){
+.birth-date p:nth-child(1) {
     grid-column: 1 / 3;
     grid-row: 1;
-} 
- .birth-date p:nth-child(2){
+}
+
+.birth-date p:nth-child(2) {
     grid-column: 2;
     grid-row: 2;
 }
-.birth-date p:nth-child(3){
-    grid-column: 1;
-    grid-row: 2; 
- } 
 
-time.birth-date{
+.birth-date p:nth-child(3) {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+time.birth-date {
 
     margin-block-end: var(--margin-between);
 }
 
-.map-container{
+.map-container {
     width: 100%;
     height: 400px;
-    
-margin-block-end: var(--margin-between);
+
+    margin-block-end: var(--margin-between);
+    border-radius: var(--main-border-radios);
+
 }
 
-.places{
-    height: 100px;
+.places {
+    display: flex;
+    flex-direction: column;
+
+    place-items: center;
+
 
     margin-block-end: var(--margin-between);
 
-    background-color: rgb(151, 101, 36);
+
+    border-radius: var(--main-border-radios);
+}
+
+ul {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: s;
+    gap: 1em;
+
+}
+
+/* אני לא מצליח להזיז את המרקר רחוק מהשורה של שם המקום */
+
+li::marker {
+    content: '🏠';
+}
+
+li {
+    padding: .4em;
+    border-radius: var(--main-border-radios);
+    border: 1px solid rgb(75, 74, 74);
+    background-color: rgb(190, 189, 188);
+
 }
